--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,18 @@
     <string name="title_activity_sign_in_sign_up">SignInSignUp</string>
     <string name="action_settings">Settings</string>
     <string name="alt_app_logo">App logo made of a magnifier and a graduate hat</string>
+    <string name="username_txt">Username</string>
+    <string name="password_txt">Password</string>
+    <string name="passwd_hint5">******</string>
+    <string name="sign_in_txt">Sign In</string>
+    <string name="forgotten_password_txt">Forgotten password?</string>
+    <string name="email_txt">Email</string>
+    <string name="confirm_password_txt">Confirm password</string>
+    <string name="role_txt">I want to register as a</string>
+    <string name="student_role_txt">Student</string>
+    <string name="tutor_role_txt">Tutor</string>
+    <string name="sign_up_txt">Sign Up</string>
+    <string name="your_username_txt">Your username</string>
+    <string name="email_address_txt">Email address</string>
+    <string name="choose_username_txt">Choose a username</string>
 </resources>
