--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Tutor Finder</string>
     <string name="title_activity_sign_in_sign_up">SignInSignUp</string>
+    <string name="title_activity_main">Home</string>
     <string name="action_settings">Settings</string>
     <string name="alt_app_logo">App logo made of a magnifier and a graduate hat</string>
     <string name="username_txt">Username</string>
