--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="your_username_txt">Your username</string>
     <string name="email_address_txt">Email address</string>
     <string name="choose_username_txt">Choose a username</string>
+    <string name="reset_psswd_instructions_txt">Enter the email address associated with your account to receive a password reset email:</string>
+    <string name="reset_psswd_button_txt">Send reset email</string>
 </resources>
