--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="decline_action">Decline</string>
     <string name="tutor_admin_page">Tutors</string>
     <string name="subject_admin_page">Subjects</string>
+    <string name="edit_pen_button_description">Edit profile picture button</string>
 </resources>
