--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="subject_name">Subject\'s name</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="sign_out_txt">Sign Out</string>
 </resources>
