- Alphabet scroller bug fixed - Nav menus in student and tutor main activity updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="subjects_tutored_txt">Subjects that can be tutored:</string>
     <string name="chat_txt">Chat</string>
     <string name="request_a_session_txt">Request a session</string>
+    <string name="my_conversations_txt">My conversations</string>
+    <string name="requested_sessions_txt">Requested sessions</string>
 </resources>
