Add activities form conversation and requests
Added listViews to show the requests and conversations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,6 @@
     <string name="no_upcoming_sessions_txt">You have no upcoming sessions</string>
     <string name="upcoming_sessions_txt">Dates of your next upcoming sessions (up to five):</string>
     <string name="send">Send</string>
+    <string name="select_request_label">Select session request to view its details</string>
+    <string name="conversation_list_label">Select a user to start a conversation</string>
 </resources>
