- Splash screen layout changed - Fixed following bug: sign and forgot password button superimposed when the soft keyboard appeared - Fixed following bug: input text in the chat activity hidden by the soft keyboard (I don't believe my solution is the best but well... it does the job) - Removed profile picture when requesting a session (the pic is not needed because it is not supposed to view a profile), cf issue #48 - Removed the email info in the view tutor profile from a student's perspective (this is a private info which should not be visible to other users)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="send">Send</string>
     <string name="select_request_label">Select session request to view its details</string>
     <string name="conversation_list_label">Select a user to start a conversation</string>
+    <string name="selected_tutor_txt">Selected tutor:</string>
 </resources>
